GETSAFE-000 : Fix route issue for developer journey, move buy-flow inside pages and fix  alignments

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,6 @@
     margin: 0 auto;
 }
 
-.form-container {
+.form-container, .page-text {
     text-align: center;
 }
